--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "ngx-owl-carousel-o": "^7.0.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
